# maked_darknet_cpp

./: CMakeLists.txt  README.md
src/: detector.cpp
